--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -69,7 +69,7 @@ Site
                   </div>
                   <div class="card-content grey lighten-4">
                     <div id="test4">{% include "home/loginform.html" %}</div>
-                    <div id="test5">Test 2</div>
+                    <div id="test5">{% include "home/registerform.html" %}</div>
                   </div>
             </div>
           </div>
