--- a/home/templates/home/loginform.html
+++ b/home/templates/home/loginform.html
@@ -11,7 +11,7 @@
           <input id="password" type="password" class="validate">
           <label for="password">Password</label>
         </div>
-        <a class="waves-effect waves-light btn right-align"><i class="material-icons left">label</i>button</a>
+        <button class="btn waves-effect waves-light" type="submit" name="action1">Log In</button>
       </div>
           </div>
         </div>
