--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@ Site
     <div class="col 4">
       <div class="card brown lighten-2">
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="small material-icons">menu</i></a>
-        <ul id="slide-out" class="fixed side-nav">
+        <ul id="slide-out" class="side-nav">
           <li><div class="user-view">
             <a href="#!user"><img class="circle" src="{% static "img/yuna.jpg" %}"></a>
             <a href="#!name"><span class="grey-text name">John Doe</span></a>
@@ -61,7 +61,7 @@ Site
           <div class="col 11 right">
             <br><br>
             <div class="card hoverable">
-                  <div class="card-tabs tabs-fixed-width">
+                  <div class="card-tabs">
                     <ul class="tabs ">
                       <li class="tab"><a class="active" href="#test4">Login</a></li>
                       <li class="tab"><a href="#test5">Register</a></li>
