--- a/home/templates/home/loginform.html
+++ b/home/templates/home/loginform.html
@@ -1,5 +1,8 @@
+{% load widget_tweaks %}
+
+
 <div class="row">
-    <form class="col s12">
+    <form class="col s12"> {% csrf_token %}
       <div class="row">
         <div class="input-field col s12">
           <input id="email" type="email" class="validate">
@@ -11,7 +14,7 @@
           <input id="password" type="password" class="validate">
           <label for="password">Password</label>
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action1">Log In</button>
+        <button class="btn waves-effect waves-light" type="submit" name='A'>Log In</button>
       </div>
           </div>
         </div>
