--- a/home/templates/home/registerform.html
+++ b/home/templates/home/registerform.html
@@ -1,7 +1,7 @@
 {% load widget_tweaks %}
 
 <div class="row">
-    <form class="col s12" method="post">
+    <form class="col s12" method="post">      {% csrf_token %}
       <div class="row">
         <div class="input-field">
               <div class="fieldWrapper">
@@ -65,6 +65,6 @@
                 {% endif %}
             </div>
       </div>
-      <button class="btn waves-effect waves-light" type="submit" name="action2">Submit<i class="material-icons right">send</i></button>
+      <button class="btn waves-effect waves-light" type="submit" name='B'>Submit<i class="material-icons right">send</i></button>
     </form>
   </div>
