--- a/home/templates/home/registerform.html
+++ b/home/templates/home/registerform.html
@@ -1,7 +1,8 @@
 {% load widget_tweaks %}
 
 <div class="row">
-    <form class="col s12" method="post">      {% csrf_token %}
+    <form class="col s12" method="post">
+       {% csrf_token %}
       <div class="row">
         <div class="input-field">
               <div class="fieldWrapper">
