--- a/home/templates/home/mainpage.html
+++ b/home/templates/home/mainpage.html
@@ -32,7 +32,7 @@
 
   <style media="screen">
     body {
-          background: url({% static "img/background.jpg" %});
+          background: url({% static "img/backgrounda.jpg" %});
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
