--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -48,13 +48,13 @@ Site
       </div>
     </div>
 
-       <div class="carousel col 4">
+       <div class="carousel carousel-slider">
         <br><br><br><br>
         <a class="carousel-item" href="#one!"><img src="{% static "img/SPY_BOT P1.JPG" %}"></a>
         <a class="carousel-item" href="#two!"><img src="{% static "img/SPY_BOT P2.JPG" %}"></a>
         <a class="carousel-item" href="#three!"><img src="{% static "img/SPY_BOT P3.JPG" %}"></a>
-        <a class="carousel-item" href="#four!"><img src="{% static "SPY_BOT P4.JPG" %}"></a>
-        <a class="carousel-item" href="#five!"><img src="{% static "SPY_BOT P5.JPG" %}"></a>
+        <a class="carousel-item" href="#four!"><img src="{% static "img/SPY_BOT P4.JPG" %}"></a>
+        <a class="carousel-item" href="#five!"><img src="{% static "img/SPY_BOT P5.JPG" %}"></a>
     </div>
 
       <div class="row">
