--- a/home/templates/home/mainpage.html
+++ b/home/templates/home/mainpage.html
@@ -20,7 +20,7 @@
 
     $('.carousel-slider').slider({full_width: true});
 
-    $('.carousel.carousel-slider').carousel({fullWidth: false});
+    $('.carousel.carousel-slider').carousel({fullWidth: true});
 
     $('ul.tabs').tabs();
 
