--- a/home/static/css/materialize.css
+++ b/home/static/css/materialize.css
@@ -3,6 +3,7 @@
  * Copyright 2014-2017 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
@@ -8187,7 +8188,9 @@ input[type=range]:focus::-ms-fill-upper {
 
 .carousel {
   overflow: hidden;
-  position: relative;
+  position: absolute;
+  left: 0;
+  top: 100px;
   width: 100%;
   height: 400px;
   -webkit-perspective: 500px;
@@ -8199,8 +8202,8 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .carousel.carousel-slider {
-  top: 0;
-  left: 0;
+  top: 50px;
+  left: 50px;
 }
 
 .carousel.carousel-slider .carousel-fixed-item {
