--- a/home/static/css/materialize.css
+++ b/home/static/css/materialize.css
@@ -5003,7 +5003,7 @@ small {
   overflow-x: auto;
   overflow-y: hidden;
   height: 48px;
-  width: 100%;
+  width: 90%;
   background-color: #fff;
   margin: 0 auto;
   white-space: nowrap;
@@ -8188,9 +8188,9 @@ input[type=range]:focus::-ms-fill-upper {
 
 .carousel {
   overflow: hidden;
-  position: inherit;
+  position: relative;
   left: 0;
-  top: 100px;
+  top: 0px;
   width: 100%;
   height: 400px;
   -webkit-perspective: 500px;
@@ -8202,7 +8202,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .carousel.carousel-slider {
-  top: 50px;
+  top: 0px;
   left: 50px;
 }
 
@@ -8316,10 +8316,19 @@ input[type=range]:focus::-ms-fill-upper {
   visibility: visible;
   -webkit-animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
           animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
-  -webkit-transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
 }
 
 .tap-target {
@@ -8372,10 +8381,19 @@ input[type=range]:focus::-ms-fill-upper {
 
 .tap-target-wave::after {
   visibility: hidden;
-  -webkit-transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s;
-  transition: opacity .3s, transform .3s, visibility 0s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s,
+ -webkit-transform .3s;
   z-index: -1;
 }
 
