--- a/home/templates/home/mainpage.html
+++ b/home/templates/home/mainpage.html
@@ -42,6 +42,17 @@
 
 </head>
 <body >
+  <header>
+    <nav>
+      <div class="nav-wrapper deep-purple darken-1">
+        <a href="#" class="brand-logo center">ELECTRONICS CLUB</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="#"><b>IIT Bhilai</b></a></li>
+        </ul>
+      </div>
+    </nav>
+                
+  </header>
 
 
     {% block body %}
