--- a/home/static/css/materialize.css
+++ b/home/static/css/materialize.css
@@ -8188,7 +8188,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .carousel {
   overflow: hidden;
-  position: absolute;
+  position: inherit;
   left: 0;
   top: 100px;
   width: 100%;
@@ -8221,7 +8221,7 @@ input[type=range]:focus::-ms-fill-upper {
 .carousel.carousel-slider .carousel-item {
   width: 100%;
   height: 100%;
-  min-height: 400px;
+  min-height: 100px;
   position: absolute;
   top: 0;
   left: 0;
